@@ -20,7 +20,7 @@
 
 #ifndef _debug_h
 #define _debug_h
-static char     _debug_h_id[] = "$Id: debug.h,v 1.1 2004/09/09 13:35:51 rogerms Exp $";
+static char     _debug_h_id[] = "$Id: debug.h,v 1.1.1.2 2004/11/01 00:22:46 rogerms Exp $";
 
 #ifdef HAVE_CONFIG_H
 #include <config.h>
@@ -54,8 +54,11 @@ extern          "C" {
 #endif
 /*
 $Log: debug.h,v $
-Revision 1.1  2004/09/09 13:35:51  rogerms
-Initial revision
+Revision 1.1.1.2  2004/11/01 00:22:46  rogerms
+*** empty log message ***
+
+Revision 1.1.1.1  2004/09/09 13:35:51  rogerms
+V1.0
 
 Revision 1.1  2004/08/27 23:17:07  RogerSeguin
 Initial revision
